--- a/IV/IV.lyx
+++ b/IV/IV.lyx
@@ -82,7 +82,8 @@ theorems-ams-extended-bytype
 \begin_body
 
 \begin_layout Title
-Apparently Weak Instruments and a Solution
+Dealing with the Inherent Collinearity in the Second Stage of Two Stage
+ Least Squares
 \end_layout
 
 \begin_layout Author
@@ -135,104 +136,294 @@ aaa; bbb
 Introduction
 \end_layout
 
+\begin_layout Itemize
+Work out collinearity implications starting from asymptotic variance of
+ 2SLS estimator? Start with the almost sure limit of 
+\begin_inset Formula $\left(\frac{\hat{X}^{\prime}\hat{X}}{n}\right)^{-1}$
+\end_inset
+
+ and relate? 
+\end_layout
+
+\begin_layout Itemize
+Do a Monte Carlo using the Angrist-Krueger estimation results as the d.g.p.?
+\end_layout
+
 \begin_layout Standard
-Consider the simple linear regression model with one endogenous regressor:
+Two stage least squares deals with the endogeneity of the regressor 
+\begin_inset Formula $x$
+\end_inset
+
+ in the structural linear regression equation 
 \end_layout
 
 \begin_layout Standard
 \begin_inset Formula 
-\begin{align*}
-y_{i} & =X_{i}^{\prime}\beta+\epsilon_{i}\\
-X_{i} & =\left[\begin{array}{c}
-x_{i}\\
-W_{i}
-\end{array}\right],
-\end{align*}
+\begin{align}
+y & =\beta x+X\gamma+u,\label{SF}
+\end{align}
 
 \end_inset
 
 where 
-\begin_inset Formula $E(\epsilon_{i}|x_{i})\ne0$
+\begin_inset Formula $x$
 \end_inset
 
- but 
-\begin_inset Formula $E(\epsilon_{i}|W_{i})=0.$
+ is an endogenous regressor 
+\begin_inset Formula $x$
 \end_inset
 
- Assume that additional instruments, 
-\begin_inset Formula $Q_{i}$
-\end_inset
-
-, are available, that also satisfy the exogeneity requirement: 
-\begin_inset Formula $E(\epsilon_{i}|Q_{i})=0.$
-\end_inset
-
- Our starting point will be the well-known two stage least squares (2SLS)
- estimator, 
-\begin_inset Formula $\tilde{\beta}$
-\end_inset
-
-, which is defined by: (i) first obtain 
-\begin_inset Formula $\widehat{X_{i}}$
-\end_inset
-
- as the fitted values from a regression of 
-\begin_inset Formula $X_{i}$
-\end_inset
-
- on 
-\begin_inset Formula $W_{i}$
-\end_inset
-
-, and then (ii) obtain 
-\begin_inset Formula $\tilde{\beta}$
-\end_inset
-
- using an OLS regression of 
-\begin_inset Formula $y_{i}$
-\end_inset
-
- on 
-\begin_inset Formula $\widehat{X_{i}}$
+ that is assumed to be correlated with 
+\begin_inset Formula $u$
 \end_inset
 
 .
+ The reduced form equation for 
+\begin_inset Formula $x$
+\end_inset
+
+ is
+\begin_inset Formula 
+\begin{align}
+x & =Z\Pi+V,\label{eq:RF}
+\end{align}
+
+\end_inset
+
+where 
+\begin_inset Formula $Z=[\begin{array}{cc}
+X & W\end{array}]$
+\end_inset
+
+ is a matrix of instruments that are uncorrelated with 
+\begin_inset Formula $u$
+\end_inset
+
+.
+ 
+\begin_inset Formula $Z$
+\end_inset
+
+ includes 
+\begin_inset Formula $X$
+\end_inset
+
+ as some of its columns, and also some additional instruments 
+\begin_inset Formula $W$
+\end_inset
+
+ which are not regressors in the structural form equation.
+ Given 
+\begin_inset Formula $Z,$
+\end_inset
+
+we can form 
+\begin_inset Formula $P_{Z}=Z(Z^{\prime}Z)^{-1}Z^{\prime},$
+\end_inset
+
+ and with this, we can obtain the reduced form predictions 
+\begin_inset Formula $\widehat{x}=P_{Z}x.$
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
-It is actually only necessary to regress the endogenous regressor on the
- instruments in the first stage, as the included exogenous variables can
- serve as their own instruments.
- It this form the first stage regression is
+The second stage regression applies OLS to the equation
+\begin_inset Formula 
+\begin{equation}
+y=\beta\widehat{x}+X\gamma+\epsilon\label{eq:second stage regression}
+\end{equation}
+
+\end_inset
+
+where 
+\begin_inset Formula $\epsilon=u-\beta w$
+\end_inset
+
+ and 
+\begin_inset Formula $w=(I-P_{Z})x.$
+\end_inset
+
+ This regression model suffers from inherent collinearity: 
+\begin_inset Formula $\widehat{x}$
+\end_inset
+
+ is formed as a linear combination of variables that include 
+\begin_inset Formula $X.$
+\end_inset
+
+ This collinearity is a partial explanation of the well-known fact that
+ the 2SLS estimator is often imprecise.
+ 
 \end_layout
 
 \begin_layout Standard
+From classical least squares theory, we know that
 \begin_inset Formula 
 \[
-x_{i}=Q_{i}\pi+W_{i}\tau+V_{i}.
+V(\hat{\beta}_{j})=\frac{\sigma^{2}}{TSS_{j}(1-R_{j|-j}^{2})},
 \]
 
 \end_inset
 
-The terminology 
-\begin_inset Quotes eld
+where 
+\begin_inset Formula $TSS_{j}$
 \end_inset
 
-weak instruments
-\begin_inset Quotes erd
+ is the total sum of squares of the 
+\begin_inset Formula $j^{th}$
 \end_inset
 
- is used to describe poor performance of the IV estimator that can be due
- to different causes.
- A method for diagnosing weak instruments is to check that the 
+ regressor (the 
+\begin_inset Formula $j^{th}$
+\end_inset
+
+ column of 
+\begin_inset Formula $X)$
+\end_inset
+
+, and 
+\begin_inset Formula $R_{j|-j}^{2}$
+\end_inset
+
+ is the coefficient of determination when the 
+\begin_inset Formula $j^{th}$
+\end_inset
+
+ regressor is regressed upon all columns of 
+\begin_inset Formula $X$
+\end_inset
+
+ except the 
+\begin_inset Formula $j^{th}$
+\end_inset
+
+.
+ This result is not strictly applicable to the second stage regression in
+ eqn.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:second stage regression"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+, but, nevertheless, it can help us to form intuition regarding the 2SLS
+ estimator.
+\end_layout
+
+\begin_layout Standard
+If the first stage regression of eqn.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:RF"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+ fits poorly, then 
+\begin_inset Formula $\widehat{x}$
+\end_inset
+
+ will have little variation around its mean, so 
+\begin_inset Formula $TSS_{\hat{x}}$
+\end_inset
+
+ will be close to zero.
+ For good performance of the 2SLS estimator, we would like that the overall
+ fit of the first stage regression should be good.
+ However, we would also like for 
+\begin_inset Formula $R_{\hat{x}|X}^{2},$
+\end_inset
+
+ which is the measure of goodness of fit when 
+\begin_inset Formula $\hat{x}$
+\end_inset
+
+ is regressed upon 
+\begin_inset Formula $X,$
+\end_inset
+
+ the remaining regressors in eqn.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:second stage regression"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+, to be low.
+ Of course, for 
+\begin_inset Formula $\hat{x}$
+\end_inset
+
+ to have good variation about its mean but also not be excessively correlated
+ with the regressors 
+\begin_inset Formula $X,$
+\end_inset
+
+ we need that the excluded instruments, those which are in 
+\begin_inset Formula $Z$
+\end_inset
+
+ but not in 
+\begin_inset Formula $X$
+\end_inset
+
+, must have good explanatory power for 
+\begin_inset Formula $x.$
+\end_inset
+
+ The reduced form equation can be re-written as 
+\begin_inset Formula 
+\[
+x=X\Pi_{1}+W\Pi_{2}+V,
+\]
+
+\end_inset
+
+where we partition the instruments that are included in the structural form
+ regression (
+\begin_inset Formula $X)$
+\end_inset
+
+ from those which are excluded (
+\begin_inset Formula $W).$
+\end_inset
+
+ To meet the two requirements that this equation fits well, but also that
+ the fitted values are not excessively correlated with 
+\begin_inset Formula $X,$
+\end_inset
+
+ we need that the instruments 
+\begin_inset Formula $W$
+\end_inset
+
+ must contribute substantially to the good fit to 
+\begin_inset Formula $x$
+\end_inset
+
+.
+ This motivates testing for weak instruments by using the 
 \begin_inset Formula $F$
 \end_inset
 
  statistic for the hypothesis that 
-\begin_inset Formula $\pi$
+\begin_inset Formula $\Pi_{2}$
 \end_inset
 
- is equal to a vector of zeros is above a given threshold (
+ is a vector of zeros in this last regression (
 \begin_inset CommandInset citation
 LatexCommand citet
 key "stock2005testing"
@@ -241,118 +432,60 @@ literal "false"
 \end_inset
 
 ).
- The test may lead to a positive diagnosis for several reasons:
-\end_layout
-
-\begin_layout Itemize
-the excluded instruments are actually irrelevant, and the true value of
- 
-\begin_inset Formula $\pi$
+ However, passing this test is no guarantee that the 2SLS estimator will
+ perform well - statistical significance of 
+\begin_inset Formula $\Pi_{2}$
 \end_inset
 
- is a vector of zeros.
- The parameter vector 
-\begin_inset Formula $\beta$
+ does not guarantee that 
+\begin_inset Formula $W$
 \end_inset
 
- is not identified by the chosen instruments.
-\end_layout
-
-\begin_layout Itemize
-the excluded instruments are actually weak, because the true value of 
-\begin_inset Formula $\pi$
-\end_inset
-
- is close to zero, relative to its asymptotic variance.
- The excluded instruments can explain little of the variation in 
+ makes an important contribution to the fit of 
 \begin_inset Formula $x$
 \end_inset
 
- that is not explained by the included instruments, even in large samples.
- The asymptotic distribution of the IV estimator may be non-standard.
-\end_layout
-
-\begin_layout Itemize
-the 
-\emph on
-estimated
-\emph default
- value of 
-\begin_inset Formula $\pi$
+, in comparison to that of 
+\begin_inset Formula $X,$
 \end_inset
 
- is 
-\begin_inset Quotes eld
-\end_inset
-
-close
-\begin_inset Quotes erd
-\end_inset
-
- to zero, or the estimated variance of of the estimator of 
-\begin_inset Formula $\pi$
-\end_inset
-
- is large.
- This may occur due to collinearity between 
-\begin_inset Formula $Q_{i}$
-\end_inset
-
- and 
-\begin_inset Formula $W_{i},$
-\end_inset
-
- and it can occur even if the true value of 
-\begin_inset Formula $\pi$
-\end_inset
-
- is far from zero.
- When 
-\begin_inset Formula $\pi$
-\end_inset
-
- is is far enough from zero, the so-called concentration parameter (
-\begin_inset CommandInset citation
-LatexCommand citet
-key "rothenberg1984approximating"
-literal "false"
-
-\end_inset
-
-; 
-\begin_inset CommandInset citation
-LatexCommand citet
-key "stock2005testing"
-literal "false"
-
-\end_inset
-
-) is large and grows with the sample size, and the asymptotic distribution
- of the 2SLS is standard.
- 
+ and it does not guarantee that the overall fit is good.
 \end_layout
 
 \begin_layout Standard
-We will refer to the last of these cases as one of 
-\begin_inset Quotes eld
+This paper is concerned with the collinearity between 
+\begin_inset Formula $\hat{x}$
 \end_inset
 
-apparently weak instruments
-\begin_inset Quotes erd
+ and 
+\begin_inset Formula $X$
 \end_inset
 
-, because diagnostic methods may indicate that instruments are weak, even
- though the 2SLS estimator may have satisfactory performance in large samples.
- Even so, it may be highly variable in small samples, so, for a given sample,
- 2SLS estimator may be of little use.
- When weak instruments are detected, much of the literature has focused
- on how to obtain reliable hypothesis tests, without seeking to improve
- the small sample reliability of the estimator.
- This paper seeks to distinguish more carefully if the problem of weak instrumen
-ts is real or apparent, and, in the latter case, to attack the problem of
- small sample unreliability of the 2SLS estimator.
- This will be done by applying collinearity-robust estimation methods in
- the two stages.
+ in the second stage regression, eqn.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:second stage regression"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+.
+ It shows that this collinearity can have substantial effects, even when
+ weakness of the instruments may be rejected.
+ It proposes to apply ridge regression, a well known tool for dealing with
+ collinearity, to the estimation of the second stage regression of 2SLS.
+ We find that this solution can lead to much improved estimation, compared
+ to plain vanilla 2SLS.
+\end_layout
+
+\begin_layout Standard
+Regularization of 2SLS and related estimators such as the limited information
+ maximum likelihood estimator have been studied in a number of papers, often
+ in the context of many potential instruments.
+ 
 \end_layout
 
 \begin_layout Section
